[project]
name = "ndaa-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Ashley Nagel",email = "ashleynagel@Ashleys-MacBook-Air.local"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ndaa_dashboard", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
